Criação de folha de estilo de fonts

--- a/src/fonts.css
+++ b/src/fonts.css
@@ -33,7 +33,7 @@
   
   @font-face {
     font-family: 'poppinsmedium';
-    src: url('../fonts/poppins-medium-webfont.woff2') format('woff2'),
+    src: url('../fonts/poppins-medium-webfont.woff') format('woff2'),
          url('../fonts/poppins-medium-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
