--- a/src/style.css
+++ b/src/style.css
@@ -19,3 +19,28 @@ header {
     flex-direction: column;
     line-height: 10px;
 }
+
+li {
+    display: inline-block;
+    margin: 20px;
+}
+
+h1 {
+    font-weight: 200;
+}
+
+main {
+    display: flex;
+    flex-direction: row;
+    margin-top: 50px;
+}
+
+h2 {
+    font-size: 56px;
+    line-height: 10px;
+    font-family: poppinsmedium;
+}
+
+span {
+    color: rgb(132, 13, 201);
+}
