--- a/src/style.css
+++ b/src/style.css
@@ -25,6 +25,26 @@ li {
     margin: 20px;
 }
 
+a {
+    color: white;
+}
+
+a:hover {
+    color: rgb(132, 13, 201);
+    transition: 0.3s all;
+}
+
+#inscreva-se-btn {
+    border: 2px solid rgb(132, 13, 201);
+    padding: 10px;
+    border-radius: 15px;
+}
+
+#inscreva-se-btn:hover {
+    background-color: rgb(132, 13, 201);
+    color: white;
+}
+
 h1 {
     font-weight: 200;
 }
@@ -43,4 +63,33 @@ h2 {
 
 span {
     color: rgb(132, 13, 201);
+}
+
+p {
+    line-height: 20px;
+    max-width: 600px;
+    font-family: poppinslight;
+}
+
+img {
+    width: 570px;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+    width: 70%;
+}
+
+form [type="submit"] {
+    
+}
+
+input {
+    margin-top: 20px;
+    height: 20px;
+    padding: 15px;
+    border-radius: 20px;
+    border: none;
+    font-size: 15px;
 }
