--- a/src/media.css
+++ b/src/media.css
@@ -1,4 +1,4 @@
-@media screen and (max-width: 760px) {
+@media screen and (max-width: 1000px) {
     header {
         flex-direction: column;
     }
@@ -7,8 +7,12 @@
         flex-direction: column;
     }
 
-    h2 {
+    span {
         font-size: 32px;
+    }
+
+    h2 {
+        font-size: 25px;
     }
     form {
         margin: 0 auto;
@@ -18,9 +22,10 @@
         align-self: center;
     }
     img {
-        width: 330px;
-        margin-top: 60px;
-
+        display: none;
     }
 
+    ul {
+        text-align: center;
+    }
 }
